--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://thepurplingpoet.github.io/blog
-<meta http-equiv="refresh" content="0; URL=https://thepurplingpoet.github.io/">
-<link rel="canonical" href="https://thepurplingpoet.github.io/">
+<title>Redirecting to https://thepurplingpoet.github.io/blog </title>
+<meta http-equiv="refresh" content="0; URL=https://thepurplingpoet.github.io/blog">
+<link rel="canonical" href="https://thepurplingpoet.github.io/blog">
